--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -41,8 +41,8 @@ $fileManager = dolphin
 $discord=vesktop-wayland
 $menu=rofi -show drun -config ~/.config/rofi/config.rasi
 $toggle_waybar=~/.config/waybar/scripts/toggle_waybar.sh
-$change_wallpaper=~/.config/hypr/scripts/wallpaper_select.sh
-$wallpaper_selector=~/.config/hypr/scripts/wallpaper_changer.sh
+$wallpaper_select=~/.config/hypr/scripts/wallpaper_select.sh
+$wallpaper_changer=~/.config/hypr/scripts/wallpaper_changer.sh
 
 #################
 ### AUTOSTART ###
@@ -54,7 +54,7 @@ $wallpaper_selector=~/.config/hypr/scripts/wallpaper_changer.sh
 exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-
+exec-once = wal -R
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -91,7 +91,7 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 4
+    gaps_in = 7
     gaps_out = 15
 
     border_size = 1
@@ -133,7 +133,7 @@ decoration {
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = false
+        enabled = true
         size = 2
         passes = 1
 
@@ -145,36 +145,26 @@ decoration {
 animations {
     enabled = yes
 
-    # A new bezier curve for a smoother slide
     bezier = smoothOut, 0.36, 0, 0.66, -0.56
-
-    # Default curves, see https://wiki.hypr.land/Configuring/Animations/#curves
-    #        NAME,           X0,   Y0,   X1,   Y1
-    bezier = easeOutQuint,   0.23, 1,    0.32, 1
+    bezier = smoothIn, 0.25, 1, 0.5, 1
+    bezier = wind, 0.05, 0.9, 0.1, 1.05
+    bezier = winIn, 0.1, 1.05, 0.1, 1
+    bezier = winOut, 0.3, -0.1, 0.7, 0
+    bezier = slow, 0, 0.85, 0.3, 1
+    bezier = overshot, 0.7, 0.6, 0.1, 1.1
+    bezier = bounce, 1.1, 1.6, 0.2, 0.9
+    bezier = slidin, 0.06, 0.96, 0.07, 1
+    bezier = easeOutQuint, 0.23, 1, 0.32, 1
     bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
-    bezier = linear,         0,    0,    1,    1
-    bezier = almostLinear,   0.5,  0.5,  0.75, 1
-    bezier = quick,          0.15, 0,    0.1,  1
 
-    # Default animations, see https://wiki.hypr.land/Configuring/Animations/
-    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     10,    default
-    animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     5,     smoothOut,    slide
-    animation = windowsOut,    1,     5,     smoothOut,    slide
-    animation = fadeIn,        1,     1.73,  almostLinear
-    animation = fadeOut,       1,     1.46,  almostLinear
-    animation = fade,          1,     3.03,  quick
-    animation = layers,        1,     3.81,  easeOutQuint
-    animation = layersIn,      1,     4,     easeOutQuint, fade
-    animation = layersOut,     1,     1.5,   linear,       fade
-    animation = fadeLayersIn,  1,     1.79,  almostLinear
-    animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, fade
-    animation = workspacesIn,  1,     1.21,  almostLinear, fade
-    animation = workspacesOut, 1,     1.94,  almostLinear, fade
-    animation = zoomFactor,    1,     7,     quick
+    animation = windows, 1, 7, wind, slide
+    animation = windowsIn, 1, 7, winIn, slide
+    animation = windowsOut, 1, 7, winOut, slide
+    animation = windowsMove, 1, 7, slidin
+    animation = border, 1, 10, default
+    animation = borderangle, 1, 8, default
+    animation = fade, 1, 7, default
+    animation = workspaces, 1, 8, overshot, slide
 }
 
 # Ref https://wiki.hypr.land/Configuring/Workspace-Rules/
@@ -262,9 +252,10 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, L, exec, hyprlock
 bind = CTRL, E, exec, doom run
-
+bind = $mainMod, T, exec, cg-timer
+bind = ALT, L, exec, chat-gpt 
 # Clipboard history
-bind = ALT, V, exec, ~/.config/hypr/scripts/clipboard_menu.sh
+bind = ALT, M, exec, ~/.config/hypr/scripts/clipboard_menu.sh
 
 # Toggle window opacity
 bind = $mainMod, O, exec, ~/.config/hypr/scripts/toggle_opacity.sh
@@ -287,8 +278,8 @@ bind = $mainMod CTRL, B, exec, brightnessctl set 50%
 bind = $mainMod CTRL, W, exec, nmcli radio wifi toggle
 
 # wallpaper 
-bind = ALT, W, exec, $wallpaper_changer
-bind = CTRL, W, exec, $wallpaper_selector
+bind = ALT, W, exec, $wallpaper_select
+bind = CTRL, W, exec, $wallpaper_changer
 
 # Screenshot a window
 bind = $mainMod, PRINT, exec, hyprshot -m window -o ~/Pictures/screenshots -f $(date +%Y-%m-%d_%H-%M-%S).png
