--- a/configs/.config/hypr/hyprlock.conf
+++ b/configs/.config/hypr/hyprlock.conf
@@ -1,7 +1,8 @@
 # BACKGROUND
 background {
     monitor =
-    path = ~/Pictures/wallpapers/cg-wallpapers/street-fighter-logo.jpg
+    # path = ~/Pictures/wallpapers/cg-wallpapers/fuck_windows.png
+    path = ~/Pictures/wallpapers/collection-1/b-315.jpg
     blur_passes = 0
     contrast = 0.8916
     brightness = 0.8172
