--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -24,6 +24,7 @@ monitor= eDP-1,1920x1080,auto,1
 
 exec-once = dunst
 exec-once = waybar
+exec-once = wal -R
 exec-once = ~/.config/hypr/scripts/wallpaper_changer.sh
 exec-once = ~/.config/hypr/scripts/clipboard_sync.sh
 exec-once = wl-paste --watch clipman store
@@ -41,8 +42,8 @@ $fileManager = dolphin
 $discord=vesktop-wayland
 $menu=rofi -show drun -config ~/.config/rofi/config.rasi
 $toggle_waybar=~/.config/waybar/scripts/toggle_waybar.sh
-$change_wallpaper=~/.config/hypr/scripts/wallpaper_select.sh
-$wallpaper_selector=~/.config/hypr/scripts/wallpaper_changer.sh
+$wallpaper_selector=~/.config/hypr/scripts/wallpaper_select.sh
+$wallpaper_changer=~/.config/hypr/scripts/wallpaper_changer.sh
 
 #################
 ### AUTOSTART ###
@@ -287,8 +288,8 @@ bind = $mainMod CTRL, B, exec, brightnessctl set 50%
 bind = $mainMod CTRL, W, exec, nmcli radio wifi toggle
 
 # wallpaper 
-bind = ALT, W, exec, $wallpaper_changer
-bind = CTRL, W, exec, $wallpaper_selector
+bind = ALT, W, exec, $wallpaper_selector
+bind = CTRL, W, exec, $wallpaper_changer
 
 # Screenshot a window
 bind = $mainMod, PRINT, exec, hyprshot -m window -o ~/Pictures/screenshots -f $(date +%Y-%m-%d_%H-%M-%S).png
