--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -22,7 +22,8 @@
 # See https://wiki.hypr.land/Configuring/Monitors/
 monitor= eDP-1,1920x1080,auto,1
 
-exec-once = dunst
+exec-once = swaync
+exec-once = killall swaync && swaync &
 exec-once = waybar
 exec-once = wal -R
 exec-once = ~/.config/hypr/scripts/wallpaper_changer.sh
@@ -99,7 +100,7 @@ general {
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    # col.inactive_border = rgba(595959aa)
+    # col.inactive_border = rgba(555555ee)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -263,6 +264,8 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, L, exec, hyprlock
 bind = CTRL, E, exec, doom run
+
+bind = $mainMod, N, exec, ~/.config/waybar/scripts/notification_center.sh
 
 # Clipboard history
 bind = ALT, V, exec, ~/.config/hypr/scripts/clipboard_menu.sh
