--- a/configs/.config/hypr/hyprland.conf
+++ b/configs/.config/hypr/hyprland.conf
@@ -267,11 +267,17 @@ bind = CTRL, E, exec, doom run
 
 bind = $mainMod, N, exec, ~/.config/waybar/scripts/notification_center.sh
 
+
+bind = ALT, A, exec, hyprpicker -a
+
 # Clipboard history
 bind = ALT, V, exec, ~/.config/hypr/scripts/clipboard_menu.sh
 
 # Toggle window opacity
 bind = $mainMod, O, exec, ~/.config/hypr/scripts/toggle_opacity.sh
+
+# timer 
+bind = $mainMod, t, exec, cg-timer
 
 # Control Center & Power Management
 bind = ALT, C, exec, ~/.config/waybar/scripts/control_center_test.sh
